Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-13 02:32+0000\n"
+"POT-Creation-Date: 2021-12-04 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -51,7 +51,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:39
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.type]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.type[quarkus.ssm.aws.credentials.type]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.type]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.type[quarkus.secretsmanager.aws.credentials.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -97,14 +97,14 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:45
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider-default-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider-default-credentials-provider-configuration[Default credentials provider configuration]"
+msgid "[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.default-provider-default-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.default-provider-default-credentials-provider-configuration[Default credentials provider configuration]"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:54
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider.async-credential-update-enabled[quarkus.ssm.aws.credentials.default-provider.async-credential-update-enabled]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.default-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.default-provider.async-credential-update-enabled[quarkus.secretsmanager.aws.credentials.default-provider.async-credential-update-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -132,7 +132,7 @@ msgstr "`false`"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:64
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider.reuse-last-provider-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider.reuse-last-provider-enabled[quarkus.ssm.aws.credentials.default-provider.reuse-last-provider-enabled]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.default-provider.reuse-last-provider-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.default-provider.reuse-last-provider-enabled[quarkus.secretsmanager.aws.credentials.default-provider.reuse-last-provider-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -150,14 +150,14 @@ msgstr "`true`"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:70
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.static-provider-static-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.static-provider-static-credentials-provider-configuration[Static credentials provider configuration]"
+msgid "[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.static-provider-static-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.static-provider-static-credentials-provider-configuration[Static credentials provider configuration]"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:78
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.static-provider.access-key-id]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.static-provider.access-key-id[quarkus.ssm.aws.credentials.static-provider.access-key-id]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.static-provider.access-key-id]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.static-provider.access-key-id[quarkus.secretsmanager.aws.credentials.static-provider.access-key-id]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -178,7 +178,7 @@ msgstr "string"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:87
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.static-provider.secret-access-key]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.static-provider.secret-access-key[quarkus.ssm.aws.credentials.static-provider.secret-access-key]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.static-provider.secret-access-key]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.static-provider.secret-access-key[quarkus.secretsmanager.aws.credentials.static-provider.secret-access-key]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -189,14 +189,14 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:93
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration[AWS Profile credentials provider configuration]"
+msgid "[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration[AWS Profile credentials provider configuration]"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:102
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.profile-provider.profile-name]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.profile-provider.profile-name[quarkus.ssm.aws.credentials.profile-provider.profile-name]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.profile-provider.profile-name]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.profile-provider.profile-name[quarkus.secretsmanager.aws.credentials.profile-provider.profile-name]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -208,14 +208,14 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:108
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider-process-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider-process-credentials-provider-configuration[Process credentials provider configuration]"
+msgid "[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider-process-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider-process-credentials-provider-configuration[Process credentials provider configuration]"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:117
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.async-credential-update-enabled[quarkus.ssm.aws.credentials.process-provider.async-credential-update-enabled]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider.async-credential-update-enabled[quarkus.secretsmanager.aws.credentials.process-provider.async-credential-update-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -228,7 +228,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:127
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.credential-refresh-threshold]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.credential-refresh-threshold[quarkus.ssm.aws.credentials.process-provider.credential-refresh-threshold]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider.credential-refresh-threshold]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider.credential-refresh-threshold[quarkus.secretsmanager.aws.credentials.process-provider.credential-refresh-threshold]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -255,7 +255,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:137
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.process-output-limit]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.process-output-limit[quarkus.ssm.aws.credentials.process-provider.process-output-limit]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider.process-output-limit]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider.process-output-limit[quarkus.secretsmanager.aws.credentials.process-provider.process-output-limit]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -279,7 +279,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config.adoc:146
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.command]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.command[quarkus.ssm.aws.credentials.process-provider.command]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider.command]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config_quarkus.secretsmanager.aws.credentials.process-provider.command[quarkus.secretsmanager.aws.credentials.process-provider.command]`\n"
 "\n"
 "[.description]\n"
 "--\n"
