--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-profile-credentials-provider-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-profile-credentials-provider-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-13 02:32+0000\n"
+"POT-Creation-Date: 2021-12-04 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-profile-credentials-provider-config.adoc:17
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-profile-credentials-provider-config_quarkus.ssm.aws.credentials.profile-provider.profile-name]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-profile-credentials-provider-config_quarkus.ssm.aws.credentials.profile-provider.profile-name[quarkus.ssm.aws.credentials.profile-provider.profile-name]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-profile-credentials-provider-config_quarkus.secretsmanager.aws.credentials.profile-provider.profile-name]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-profile-credentials-provider-config_quarkus.secretsmanager.aws.credentials.profile-provider.profile-name[quarkus.secretsmanager.aws.credentials.profile-provider.profile-name]`\n"
 "\n"
 "[.description]\n"
 "--\n"
