--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-13 02:32+0000\n"
+"POT-Creation-Date: 2021-12-04 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration.adoc:16
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.ssm.async-client.proxy.enabled]]`link:#quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.ssm.async-client.proxy.enabled[quarkus.ssm.async-client.proxy.enabled]`\n"
+"[[quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.secretsmanager.async-client.proxy.enabled]]`link:#quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.secretsmanager.async-client.proxy.enabled[quarkus.secretsmanager.async-client.proxy.enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -67,7 +67,7 @@ msgstr "`false`"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration.adoc:26
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.ssm.async-client.proxy.endpoint]]`link:#quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.ssm.async-client.proxy.endpoint[quarkus.ssm.async-client.proxy.endpoint]`\n"
+"[[quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.secretsmanager.async-client.proxy.endpoint]]`link:#quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.secretsmanager.async-client.proxy.endpoint[quarkus.secretsmanager.async-client.proxy.endpoint]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -86,7 +86,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration.adoc:36
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.ssm.async-client.proxy.non-proxy-hosts]]`link:#quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.ssm.async-client.proxy.non-proxy-hosts[quarkus.ssm.async-client.proxy.non-proxy-hosts]`\n"
+"[[quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.secretsmanager.async-client.proxy.non-proxy-hosts]]`link:#quarkus-amazon-common-config-group-netty-http-client-config-netty-proxy-configuration_quarkus.secretsmanager.async-client.proxy.non-proxy-hosts[quarkus.secretsmanager.async-client.proxy.non-proxy-hosts]`\n"
 "\n"
 "[.description]\n"
 "--\n"
