--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-sdk-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-sdk-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-13 02:32+0000\n"
+"POT-Creation-Date: 2021-12-04 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-sdk-build-time-config.adoc:17
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-amazon-common-config-group-sdk-build-time-config_quarkus.ssm.interceptors]]`link:#quarkus-amazon-common-config-group-sdk-build-time-config_quarkus.ssm.interceptors[quarkus.ssm.interceptors]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-amazon-common-config-group-sdk-build-time-config_quarkus.secretsmanager.interceptors]]`link:#quarkus-amazon-common-config-group-sdk-build-time-config_quarkus.secretsmanager.interceptors[quarkus.secretsmanager.interceptors]`\n"
 "\n"
 "[.description]\n"
 "--\n"
