--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-sdk-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-sdk-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-13 02:31+0000\n"
+"POT-Creation-Date: 2021-12-04 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,7 +24,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-sdk-config.adoc:8
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-sdk-config_quarkus.ssm.sdk-aws-sdk-client-configurations]]link:#quarkus-amazon-common-config-group-sdk-config_quarkus.ssm.sdk-aws-sdk-client-configurations[AWS SDK client configurations]"
+msgid "[[quarkus-amazon-common-config-group-sdk-config_quarkus.secretsmanager.sdk-aws-sdk-client-configurations]]link:#quarkus-amazon-common-config-group-sdk-config_quarkus.secretsmanager.sdk-aws-sdk-client-configurations[AWS SDK client configurations]"
 msgstr ""
 
 #. type: Table
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-sdk-config.adoc:17
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-sdk-config_quarkus.ssm.endpoint-override]]`link:#quarkus-amazon-common-config-group-sdk-config_quarkus.ssm.endpoint-override[quarkus.ssm.endpoint-override]`\n"
+"[[quarkus-amazon-common-config-group-sdk-config_quarkus.secretsmanager.endpoint-override]]`link:#quarkus-amazon-common-config-group-sdk-config_quarkus.secretsmanager.endpoint-override[quarkus.secretsmanager.endpoint-override]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -62,7 +62,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-sdk-config.adoc:29
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-sdk-config_quarkus.ssm.api-call-timeout]]`link:#quarkus-amazon-common-config-group-sdk-config_quarkus.ssm.api-call-timeout[quarkus.ssm.api-call-timeout]`\n"
+"[[quarkus-amazon-common-config-group-sdk-config_quarkus.secretsmanager.api-call-timeout]]`link:#quarkus-amazon-common-config-group-sdk-config_quarkus.secretsmanager.api-call-timeout[quarkus.secretsmanager.api-call-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -85,7 +85,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-sdk-config.adoc:40
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-sdk-config_quarkus.ssm.api-call-attempt-timeout]]`link:#quarkus-amazon-common-config-group-sdk-config_quarkus.ssm.api-call-attempt-timeout[quarkus.ssm.api-call-attempt-timeout]`\n"
+"[[quarkus-amazon-common-config-group-sdk-config_quarkus.secretsmanager.api-call-attempt-timeout]]`link:#quarkus-amazon-common-config-group-sdk-config_quarkus.secretsmanager.api-call-attempt-timeout[quarkus.secretsmanager.api-call-attempt-timeout]`\n"
 "\n"
 "[.description]\n"
 "--\n"
