--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -4,7 +4,7 @@ l10n/override/ja_JP/_layouts/quarkus2.html, 2021-12-03 15:20:57 +0000, 2021-12-0
 l10n/override/ja_JP/_layouts/insights.html, 2021-12-03 01:32:18 +0000, 2021-12-01 20:34:05 +0000, OK
 l10n/override/ja_JP/_layouts/extensions.html, 2021-02-06 14:23:31 +0000, 2019-08-01 09:53:08 +0000, OK
 l10n/override/ja_JP/_guides/guides.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +0000, OK
-l10n/override/ja_JP/_data/projectfooter.yaml, 2021-12-03 01:32:18 +0000, 2021-12-02 18:37:58 +0000, OK
+l10n/override/ja_JP/_data/projectfooter.yaml, 2021-12-03 01:32:18 +0000, 2021-12-04 01:17:48 +0000, NG
 l10n/override/ja_JP/_includes/homepage-video-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
 l10n/override/ja_JP/blog.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +0000, OK
-l10n/override/ja_JP/community.md, 2021-02-06 14:23:31 +0000, 2020-04-22 14:43:38 +0000, OK
+l10n/override/ja_JP/community.md, 2021-02-06 14:23:31 +0000, 2021-12-03 18:54:24 +0000, NG
