Address upstream changes

--- a/l10n/override/ja_JP/_data/projectfooter.yaml
+++ b/l10n/override/ja_JP/_data/projectfooter.yaml
@@ -11,7 +11,7 @@ links:
       - page: ブログ
         url: /blog
       - page: ポッドキャスト
-        url: /Insights
+        url: /insights
       - page: イベント
         url: /events
       - page: ニュースレター
@@ -19,7 +19,7 @@ links:
       - page: 出版
         url: /publications
       - page: 受賞
-        url: /Awards
+        url: /awards
       - page: セキュリティポリシー
         url: /security
 
