--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -258,7 +258,7 @@ msgstr "_to_ (受信者)、件名、本文を設定して、 `Mail` オブジェ
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:103
 msgid "The `MailResource` class implements the HTTP API exposed by our application.  It handles `GET` request on `http://localhost:8080/mail."
-msgstr "`MailResource` クラスは，アプリケーションが公開しているHTTP APIを実装します。このクラスは `http://localhost:8080/mail.' に対する `GET` のリクエストを扱います。"
+msgstr "`MailResource` クラスは，アプリケーションが公開しているHTTP APIを実装します。このクラスは `http://localhost:8080/mail` に対する `GET` のリクエストを扱います。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:105
