--- a/l10n/po/ja_JP/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 17:08+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-05 21:37+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Tools for IntelliJ 1.9.0 released!'\n"
@@ -35,34 +35,31 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus Tools for IntelliJ 1.9.0 released!\n"
+"title: 'Quarkus Tools for IntelliJ 1.9.0 リリース!'\n"
 "date: 2021-12-03\n"
 "tags: announcement ide\n"
-"synopsis: 「このリリースでは、新しいプロジェクト/モジュールウィザードでQuarkusストリームのサポートが追加されています。\n"
+"synopsis: 'このリリースでは、新しいプロジェクト/モジュールウィザードでQuarkusストリームのサポートが追加されています'\n"
 "author: jeffmaury\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:13
-#, fuzzy
 msgid "We are very pleased to announce the 1.9.0 release of Quarkus Tools for IntelliJ.  This release adds support for Quarkus streams in the new project/module Quarkus wizard and fixes compatibilities with just released IntelliJ 2021.3."
 msgstr "Quarkus Tools for IntelliJの1.9.0リリースを発表できることを大変嬉しく思います。このリリースでは、新しいプロジェクト／モジュールのQuarkusウィザードでQuarkusストリームのサポートが追加され、リリースされたばかりのIntelliJ 2021.3との互換性が修正されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:14
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus streams"
-msgstr "クォークス・ストリーム"
+msgstr "Quarkus streams"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:17
-#, fuzzy
 msgid "When a new Quarkus project/module is to be generated, it is now possible to select the Quarkus stream (see https://quarkus.io/blog/quarkus-2x-platform-quarkiverse-registry/[this article]) on which the generated application will be based on."
-msgstr "新しいQuarkusプロジェクト／モジュールを生成する際に、生成されるアプリケーションのベースとなるQuarkusのストリーム（ link:https://quarkus.io/blog/quarkus-2x-platform-quarkiverse-registry/[こちらの記事]を参照）を選択できるようになりました。"
+msgstr "新しいQuarkusプロジェクト／モジュールを生成する際に、生成されるアプリケーションのベースとなるQuarkusストリーム（ link:https://quarkus.io/blog/quarkus-2x-platform-quarkiverse-registry/[こちらの記事]を参照）を選択できるようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:19
-#, fuzzy
 msgid "By default, the recommended (latest release) will be selected but you can choose another one:"
 msgstr "デフォルトでは、推奨（最新版）が選択されますが、別のものを選択することもできます。"
 
@@ -96,7 +93,6 @@ msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc:33
-#, fuzzy
 msgid "GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
 msgstr "GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
 
