--- a/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
+++ b/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-03 07:12+0000\n"
+"POT-Creation-Date: 2021-12-06 14:13+0000\n"
 "PO-Revision-Date: 2021-12-03 15:16+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -143,7 +143,7 @@ msgstr "テキストエディタか<a href=\"https://quarkus.io/guides/ide-tooli
 msgid ""
 "<code>\n"
 "@Path(\"/hello\")\n"
-"public class GreetingResource {\n"
+"public class GreetingsResource {\n"
 "\n"
 "    @GET\n"
 "    @Produces(MediaType.TEXT_PLAIN)\n"
