Apply translation memory

--- a/l10n/po/ja_JP/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc.po
@@ -49,7 +49,7 @@ msgstr ""
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:16
 #, no-wrap
 msgid "Requirements"
-msgstr ""
+msgstr "要件"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:19
@@ -70,13 +70,13 @@ msgstr ""
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:22
 #, no-wrap
 msgid "Configuration"
-msgstr ""
+msgstr "設定"
 
 #. type: Title ===
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:24
 #, no-wrap
 msgid "TL;DR"
-msgstr ""
+msgstr "詳細な説明"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc:28
