Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rest-json.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-18 02:25+0000\n"
+"POT-Creation-Date: 2021-12-07 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -155,7 +155,9 @@ msgstr "ユーザーエクスペリエンスを向上させるために、Quarku
 
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-json.adoc:72
-msgid "Quarkus also supports http://json-b.net/[JSON-B] so, if you prefer JSON-B over Jackson, you can create a project relying on the RESTEasy JSON-B extension instead:"
+#, fuzzy
+#| msgid "Quarkus also supports http://json-b.net/[JSON-B] so, if you prefer JSON-B over Jackson, you can create a project relying on the RESTEasy JSON-B extension instead:"
+msgid "Quarkus also supports https://eclipse-ee4j.github.io/jsonb-api/[JSON-B] so, if you prefer JSON-B over Jackson, you can create a project relying on the RESTEasy JSON-B extension instead:"
 msgstr "Quarkusは link:http://json-b.net/[JSON-B] もサポートしているので、JacksonよりもJSON-Bが好きな場合は、代わりにRESTEasy JSON-B エクステンションに依存したプロジェクトを作成することができます。"
 
 #. type: delimited block -
@@ -173,7 +175,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-json.adoc:86
-msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS and http://json-b.net/[JSON-B] extensions, and in particular adds the following dependency:"
+#, fuzzy
+#| msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS and http://json-b.net/[JSON-B] extensions, and in particular adds the following dependency:"
+msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS and https://eclipse-ee4j.github.io/jsonb-api/[JSON-B] extensions, and in particular adds the following dependency:"
 msgstr "このコマンドは、RESTEasy/JAX-RSと link:http://json-b.net/[JSON-B] 拡張をインポートするMaven構造を生成し、特に以下の依存関係を追加します。"
 
 #. type: delimited block -
@@ -343,7 +347,9 @@ msgstr "実装は非常に簡単で、JAX-RSのアノテーションを使って
 
 #. type: Plain text
 #: upstream/_versions/main/guides/rest-json.adoc:170
-msgid "The `Fruit` objects will be automatically serialized/deserialized by http://json-b.net/[JSON-B] or https://github.com/FasterXML/jackson[Jackson], depending on the extension you chose when initializing the project."
+#, fuzzy
+#| msgid "The `Fruit` objects will be automatically serialized/deserialized by http://json-b.net/[JSON-B] or https://github.com/FasterXML/jackson[Jackson], depending on the extension you chose when initializing the project."
+msgid "The `Fruit` objects will be automatically serialized/deserialized by https://eclipse-ee4j.github.io/jsonb-api/[JSON-B] or https://github.com/FasterXML/jackson[Jackson], depending on the extension you chose when initializing the project."
 msgstr "`Fruit` オブジェクトは、プロジェクトの初期化時に選択したエクステンションに応じて、 link:http://json-b.net/[JSON-B] または link:https://github.com/FasterXML/jackson[Jackson] によって自動的にシリアライズ/デシリアライズされます。"
 
 #. type: delimited block =
