--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-12-07 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -40,29 +40,77 @@ msgid "Default"
 msgstr "デフォルト"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:18
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:21
 #, no-wrap
 msgid ""
-"[[quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.database-credentials-role]]`link:#quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.database-credentials-role[quarkus.vault.credentials-provider.\"credentials-provider\".database-credentials-role]`\n"
+"[[quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.credentials-role]]`link:#quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.credentials-role[quarkus.vault.credentials-provider.\"credentials-provider\".credentials-role]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Database credentials role, as defined by https://www.vaultproject.io/docs/secrets/databases/index.html\n"
+"Dynamic credentials' role.\n"
 "\n"
-"One of `database-credentials-role` or `kv-path` needs to be defined. not both.\n"
+"Roles are defined by the secret engine in use. For example, `database` credentials roles are defined\n"
+"by the database secrets engine described at https://www.vaultproject.io/docs/secrets/databases/index.html.\n"
+"\n"
+"One of `credentials-role` or `kv-path` can to be defined. not both.\n"
 "--"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:19
-#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:32
-#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:45
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:22
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:33
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:47
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:60
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:73
 #, no-wrap
 msgid "string"
 msgstr "string"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:31
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:32
+#, no-wrap
+msgid ""
+"[[quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.credentials-mount]]`link:#quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.credentials-mount[quarkus.vault.credentials-provider.\"credentials-provider\".credentials-mount]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Mount of dynamic credentials secrets engine, for example `database` or `rabbitmq`.\n"
+"\n"
+"Only used when `credentials-role` is defined.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:36
+#, no-wrap
+msgid "`database`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:46
+#, no-wrap
+msgid ""
+"[[quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.credentials-request-path]]`link:#quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.credentials-request-path[quarkus.vault.credentials-provider.\"credentials-provider\".credentials-request-path]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Path of dynamic credentials request.\n"
+"\n"
+"Request paths are dictated by the secret engine in use. For standard secret engines this should be\n"
+"left as the default of `creds`.\n"
+"\n"
+"Only used when `credentials-role` is defined.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:50
+#, no-wrap
+msgid "`creds`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:59
 #, no-wrap
 msgid ""
 "[[quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.kv-path]]`link:#quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.kv-path[quarkus.vault.credentials-provider.\"credentials-provider\".kv-path]`\n"
@@ -78,7 +126,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:44
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:72
 #, no-wrap
 msgid ""
 "[[quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.kv-key]]`link:#quarkus-vault-config-group-config-credentials-provider-config_quarkus.vault.credentials-provider.-credentials-provider-.kv-key[quarkus.vault.credentials-provider.\"credentials-provider\".kv-key]`\n"
@@ -94,7 +142,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:47
+#: upstream/_generated-config/main/config/quarkus-vault-config-group-config-credentials-provider-config.adoc:75
 #, no-wrap
 msgid "`password`"
 msgstr ""
