Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-12-08 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,18 +47,32 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Whether or not Kafka serializer/deserializer autodetection is enabled.\n"
+"Whether or not Kafka serializer/deserializer auto-detection is enabled.\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config.adoc:17
+#: upstream/_generated-config/main/config/quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config.adoc:26
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config.adoc:19
+#: upstream/_generated-config/main/config/quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config.adoc:20
+#: upstream/_generated-config/main/config/quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config.adoc:28
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config.adoc:25
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config_quarkus.reactive-messaging.kafka.serializer-generation.enabled]]`link:#quarkus-reactive-messaging-kafka-reactive-messaging-kafka-build-time-config_quarkus.reactive-messaging.kafka.serializer-generation.enabled[quarkus.reactive-messaging.kafka.serializer-generation.enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether or not Kafka serializer/deserializer generation is enabled. When no serializer/deserializer are found and not set, Quarkus generates a Jackson-based serde.\n"
+"--"
+msgstr ""
