--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-01 16:05+0000\n"
+"POT-Creation-Date: 2021-12-10 17:09+0000\n"
 "PO-Revision-Date: 2021-04-25 23:37+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -759,7 +759,7 @@ msgstr "トークンの検証とイントロスペクション"
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:354
 #, fuzzy
 #| msgid "Please see link:security-openid-connect-client#token-propagation[Token Propagation] section about the Authorization Code Flow access token propagation to the downstream services."
-msgid "Please see link:security-openid-connect#token-verification-introspection for details about how the tokens are verified and introspected."
+msgid "Please see link:security-openid-connect#token-verification-introspection[Token Verification And Introspection] for details about how the tokens are verified and introspected."
 msgstr "下流サービスへの認可コードフローアクセストークンの伝播については、 link:security-openid-connect-client#token-propagation[トークン伝播] の項を参照してください。"
 
 #. type: Plain text
@@ -784,7 +784,7 @@ msgstr "コードフローアクセストークンは、ロールのソースと
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:363
 #, fuzzy
 #| msgid "Please see link:security-openid-connect-client#token-propagation[Token Propagation] section about the Authorization Code Flow access token propagation to the downstream services."
-msgid "Please see link:security-openid-connect#token-introspection-userinfo-cache for more information about using a default token cache or registering a custom cache implementation."
+msgid "Please see link:security-openid-connect#token-introspection-userinfo-cache[Token Introspection and UserInfo cache] for more information about using a default token cache or registering a custom cache implementation."
 msgstr "下流サービスへの認可コードフローアクセストークンの伝播については、 link:security-openid-connect-client#token-propagation[トークン伝播] の項を参照してください。"
 
 #. type: Title ===
