--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-jib.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-jib.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-26 02:19+0000\n"
+"POT-Creation-Date: 2021-12-11 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The base image to be used when a container image is being produced for the jar build\n"
+"The base image to be used when a container image is being produced for the jar build. When the application is built against Java 17 or higher, `registry.access.redhat.com/ubi8/openjdk-17-runtime:1.10` is used as the default. Otherwise `registry.access.redhat.com/ubi8/openjdk-11-runtime:1.10` is used as the default.\n"
 "--"
 msgstr ""
 
@@ -63,12 +63,6 @@ msgstr ""
 #, no-wrap
 msgid "string"
 msgstr "string"
-
-#. type: Table
-#: upstream/_generated-config/main/config/quarkus-container-image-jib.adoc:20
-#, no-wrap
-msgid "`fabric8/java-alpine-openjdk11-jre`"
-msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-container-image-jib.adoc:25
