--- a/l10n/po/ja_JP/_versions/main/guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-26 02:22+0000\n"
+"POT-Creation-Date: 2021-12-11 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1333,6 +1333,67 @@ msgid "This can throw all kinds of remote exceptions"
 msgstr "これは、あらゆる種類のリモート例外を投げることができます"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cache.adoc:750
+#: upstream/_versions/main/guides/cache.adoc:751
 msgid "When the call to the remote throws an exception, the cache does not store the result, so that a subsequent call to `callRemote()` with the same parameter value will not be answered out of the cache.  It will instead result in another attempt to call the remote."
 msgstr "リモートへの呼び出しが例外をスローした場合、キャッシュは結果を保存しないので、 同じパラメーター値を持つ `callRemote()` への後続の呼び出しがキャッシュから応答されることはありません。その代わりに、リモートへの呼び出しを再度試みることになります。"
+
+#. type: Title ==
+#: upstream/_versions/main/guides/cache.adoc:752
+#, no-wrap
+msgid "Going native"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cache.adoc:755
+msgid "The Cache extension supports building native executables."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cache.adoc:759
+msgid "However, to optimize runtime speed, Caffeine embarks many cache implementation classes that are selected depending on the cache configuration.  We are not registering all of them for reflection (and the ones not registered are not included into the native executables) as registering all of them would be very costly."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cache.adoc:761
+msgid "We are registering the most common implementations but, depending on your cache configuration, you might encounter errors like:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cache.adoc:772
+#, no-wrap
+msgid ""
+"2021-12-08 02:32:02,108 ERROR [io.qua.run.Application] (main) Failed to start application (with profile prod): java.lang.ClassNotFoundException: com.github.benmanes.caffeine.cache.PSAMS <1>\n"
+"        at java.lang.Class.forName(DynamicHub.java:1433)\n"
+"        at java.lang.Class.forName(DynamicHub.java:1408)\n"
+"        at com.github.benmanes.caffeine.cache.NodeFactory.newFactory(NodeFactory.java:111)\n"
+"        at com.github.benmanes.caffeine.cache.BoundedLocalCache.<init>(BoundedLocalCache.java:240)\n"
+"        at com.github.benmanes.caffeine.cache.SS.<init>(SS.java:31)\n"
+"        at com.github.benmanes.caffeine.cache.SSMS.<init>(SSMS.java:64)\n"
+"        at com.github.benmanes.caffeine.cache.SSMSA.<init>(SSMSA.java:43)\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cache.adoc:774
+msgid "`PSAMS` is one of the many cache implementation classes of Caffeine so this part may vary."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cache.adoc:777
+msgid "When you encounter this error, you can easily fix it by adding the following annotation to any of your application classes (or you can create a new class such as `Reflections` just to host this annotation if you prefer):"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cache.adoc:781
+#, no-wrap
+msgid "@RegisterForReflection(targets = { com.github.benmanes.caffeine.cache.PSAMS.class }) <1>\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cache.adoc:783
+msgid "It is an array so you can register several cache implementations in one go if your configuration requires several of them."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cache.adoc:784
+msgid "This annotation will register the cache implementation classes for reflection and this will include the classes into the native executable."
+msgstr ""
