Add machine translation

--- a/l10n/po/ja_JP/_data/getstarted-nextsteps.yaml.po
+++ b/l10n/po/ja_JP/_data/getstarted-nextsteps.yaml.po
@@ -101,9 +101,9 @@ msgstr "お気に入りのIDEでQuarkusツールを使う"
 
 #. type: Hash Value - Key: description
 #: >links>
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "JSON is now the lingua franca between microservices. See how you can get your REST services to consume and produce JSON payloads."
-msgstr ""
+msgstr "JSON は今やマイクロサービス間の共通語となっています。RESTサービスでJSONペイロードを消費したり生成したりする方法をご紹介します。"
 
 #. type: Hash Value - Key: link
 #: >links>
