--- a/l10n/po/ja_JP/_guides/config-extending-support.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-extending-support.adoc.po
@@ -69,9 +69,9 @@ msgstr "単純なインメモリ `ConfigSource` を考えてみましょう。"
 #. type: Block title
 #: upstream/_guides/config-extending-support.adoc:36
 #: upstream/_guides/config-extending-support.adoc:135
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "org.acme.config.InMemoryConfigSource"
-msgstr ""
+msgstr "org.acme.config.InMemoryConfigSource"
 
 #. type: delimited block -
 #: upstream/_guides/config-extending-support.adoc:40
@@ -170,9 +170,9 @@ msgstr "そして以下に登録します。"
 #. type: Block title
 #: upstream/_guides/config-extending-support.adoc:78
 #: upstream/_guides/config-extending-support.adoc:151
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "META-INF/services/org.eclipse.microprofile.config.spi.ConfigSource"
-msgstr ""
+msgstr "META-INF/services/org.eclipse.microprofile.config.spi.ConfigSource"
 
 #. type: delimited block -
 #: upstream/_guides/config-extending-support.adoc:82
@@ -376,9 +376,9 @@ msgstr "`io.smallrye.config.ConfigSourceFactory` の各実装は、 `META-INF/se
 
 #. type: Block title
 #: upstream/_guides/config-extending-support.adoc:185
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "org.acme.config.URLConfigSourceFactory"
-msgstr ""
+msgstr "org.acme.config.URLConfigSourceFactory"
 
 #. type: delimited block -
 #: upstream/_guides/config-extending-support.adoc:192
@@ -436,9 +436,9 @@ msgstr ""
 
 #. type: Block title
 #: upstream/_guides/config-extending-support.adoc:224
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "META-INF/services/io.smallrye.config.ConfigSourceFactory"
-msgstr ""
+msgstr "META-INF/services/io.smallrye.config.ConfigSourceFactory"
 
 #. type: delimited block -
 #: upstream/_guides/config-extending-support.adoc:228
@@ -687,9 +687,9 @@ msgstr "`ConfigSourceInterceptorFactory` は、（インターセプターの設
 
 #. type: Block title
 #: upstream/_guides/config-extending-support.adoc:367
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "org.acme.config.LoggingConfigSourceInterceptor"
-msgstr ""
+msgstr "org.acme.config.LoggingConfigSourceInterceptor"
 
 #. type: delimited block -
 #: upstream/_guides/config-extending-support.adoc:373
@@ -733,9 +733,9 @@ msgstr ""
 
 #. type: Block title
 #: upstream/_guides/config-extending-support.adoc:396
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "META-INF/services/io.smallrye.config.ConfigSourceInterceptor"
-msgstr ""
+msgstr "META-INF/services/io.smallrye.config.ConfigSourceInterceptor"
 
 #. type: delimited block -
 #: upstream/_guides/config-extending-support.adoc:400
