--- a/l10n/po/ja_JP/_posts/2021-12-10-quarkus-2-5-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-10-quarkus-2-5-2-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-10-quarkus-2-5-2-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-10-quarkus-2-5-2-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.5.2.Final released - Maintenance release'\n"
@@ -34,11 +34,19 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.5.2.Final released - Maintenance release'\n"
+"date: 2021-12-10\n"
+"tags: release\n"
+"synopsis: 2.5.2.Finalは、2.5リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-10-quarkus-2-5-2-final-released.adoc:11
+#, fuzzy
 msgid "We just released Quarkus 2.5.2.Final, a maintenance release for our 2.5 release train containing bugfixes and documentation improvements."
-msgstr ""
+msgstr "Quarkus 2.5.2.Finalがリリースされました。このリリースは、2.5リリーストレインのメンテナンスリリースで、バグフィックスとドキュメントの改善を含んでいます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-10-quarkus-2-5-2-final-released.adoc:13
@@ -58,8 +66,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-10-quarkus-2-5-2-final-released.adoc:19
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.5.2.Final[the full changelog of 2.5.2.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.5.2.Final[2.5.2.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-10-quarkus-2-5-2-final-released.adoc:20
