Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-11 02:17+0000\n"
+"POT-Creation-Date: 2021-12-14 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1385,7 +1385,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/cache.adoc:781
 #, no-wrap
-msgid "@RegisterForReflection(targets = { com.github.benmanes.caffeine.cache.PSAMS.class }) <1>\n"
+msgid "@RegisterForReflection(classNames = { \"com.github.benmanes.caffeine.cache.PSAMS\" }) <1>\n"
 msgstr ""
 
 #. type: Plain text
