--- a/l10n/po/ja_JP/_versions/main/guides/getting-started-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-10 02:16+0000\n"
+"POT-Creation-Date: 2021-12-14 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -548,10 +548,10 @@ msgstr ""
 #: upstream/_versions/main/guides/getting-started-reactive.adoc:304
 #, no-wrap
 msgid ""
-"docker run --ulimit memlock=-1:-1 -it --rm=true --memory-swappiness=0 \\\n"
+"docker run -it --rm=true \\\n"
 "    --name postgres-quarkus -e POSTGRES_USER=quarkus \\\n"
 "    -e POSTGRES_PASSWORD=quarkus -e POSTGRES_DB=fruits \\\n"
-"    -p 5432:5432 postgres:13.1\n"
+"    -p 5432:5432 postgres:14.1\n"
 msgstr ""
 
 #. type: Plain text
