--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-19 02:19+0000\n"
+"POT-Creation-Date: 2021-12-14 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,9 +59,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:35
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:46
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:60
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:69
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:78
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:89
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:116
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:125
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:134
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:145
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -114,6 +116,105 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:59
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.db-kind]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.db-kind[quarkus.datasource.\"datasource-name\".db-kind]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The kind of database we will connect to (e.g. h2, postgresql...).\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:68
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.devservices.enabled]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.devservices.enabled[quarkus.datasource.\"datasource-name\".devservices.enabled]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:69
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:107
+#, no-wrap
+msgid "boolean"
+msgstr "boolean"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:77
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.devservices.image-name]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.devservices.image-name[quarkus.datasource.\"datasource-name\".devservices.image-name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The container image name to use, for container based DevServices providers. If the provider is not container based (e.g. a H2 Database) then this has no effect.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:86
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.devservices.properties-properties]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.devservices.properties-properties[quarkus.datasource.\"datasource-name\".devservices.properties]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Generic properties that are added to the database connection URL.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:87
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:96
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.devservices.port]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.devservices.port[quarkus.datasource.\"datasource-name\".devservices.port]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Optional fixed port the dev service will listen to. \n"
+" If not defined, the port will be chosen randomly.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:97
+#, no-wrap
+msgid "int"
+msgstr "int"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:106
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.health-exclude]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.health-exclude[quarkus.datasource.\"datasource-name\".health-exclude]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled. \n"
+" By default, the health check includes all configured data sources (if it is enabled).\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:110
+#, no-wrap
+msgid "`false`"
+msgstr "`false`"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:115
+#, no-wrap
+msgid ""
 "[[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.username]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.username[quarkus.datasource.\"datasource-name\".username]`\n"
 "\n"
 "[.description]\n"
@@ -123,7 +224,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:68
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:124
 #, no-wrap
 msgid ""
 "[[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.password]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.password[quarkus.datasource.\"datasource-name\".password]`\n"
@@ -135,7 +236,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:77
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:133
 #, no-wrap
 msgid ""
 "[[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.credentials-provider]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.credentials-provider[quarkus.datasource.\"datasource-name\".credentials-provider]`\n"
@@ -147,7 +248,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:88
+#: upstream/_generated-config/main/config/quarkus-datasource-data-sources-runtime-config.adoc:144
 #, no-wrap
 msgid ""
 "[[quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.credentials-provider-name]]`link:#quarkus-datasource-data-sources-runtime-config_quarkus.datasource.-datasource-name-.credentials-provider-name[quarkus.datasource.\"datasource-name\".credentials-provider-name]`\n"
@@ -159,12 +260,3 @@ msgid ""
 " For Vault it is: vault-credentials-provider. Not necessary if there is only one credentials provider available.\n"
 "--"
 msgstr ""
-
-#~ msgid "boolean"
-#~ msgstr "boolean"
-
-#~ msgid "int"
-#~ msgstr "int"
-
-#~ msgid "`false`"
-#~ msgstr "`false`"
